adding watched configmaps
Signed-off-by: Steve Hawkins <shawkins@redhat.com>